# sift

./: .env.example  .gitignore  README.md  pyproject.toml
policies/: oracle.openshell.yaml
scripts/: healthcheck.py  hiddenlayer_poc.py  poc_all_sponsors.py  run_demo.py  run_live.py  serve_nemotron.sh
sift/: __init__.py  agent.py  benchmarks.py  config.py  experiment.py  harness.py  providers.py  router.py  sandbox.py  security.py  security_poc.py  serving.py  state.py
tasks/: dev_help_archetypes.json  dev_help_smoke.json
tests/: test_agent.py  test_benchmarks.py  test_config.py  test_harness.py  test_providers.py  test_router.py  test_sandbox.py  test_scripts.py  test_security.py  test_security_env.py  test_security_poc.py  test_serving.py  test_state.py  test_task_suites.py
