[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sift-router"
version = "0.1.0"
description = "Adaptive model-routing harness with OpenAI-compatible provider interfaces."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Sift contributors" }]

dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
